<resources>
    <string name="app_name">Wahana WebRTC Client</string>
    <string name="app_version">4.0</string>
    <string name="action_settings">Settings</string>
    <string name="action_attributes">Routing Attributes</string>
    <string name="report_issue">Send Logs</string>
    <string name="support">Support</string>
    <string name="splash_string_tagline">Avaya Oceana™</string>
    <string name="attribute_label">Attribute</string>
    <string name="attribute_name">Attribute Name</string>
    <string name="attribute_value">Attribute Value</string>
    <string name="attribute_key_a">aka</string>
    <string name="attribute_key_b">akb</string>
    <string name="attribute_key_c">akc</string>
    <string name="attribute_key_a_default">Location</string>
    <string name="attribute_key_b_default">Language</string>
    <string name="attribute_key_c_default">Service</string>
    <string name="attribute_value_a">ava</string>
    <string name="attribute_value_b">avb</string>
    <string name="attribute_value_c">avc</string>
    <string name="attribute_value_a_default">Inhouse</string>
    <string name="attribute_value_b_default">English</string>
    <string name="attribute_value_c_default">Sales</string>
    <string name="attribute_key_a_elite">aka Elite</string>
    <string name="attribute_key_b_elite">akb Elite</string>
    <string name="attribute_key_c_elite">akc Elite</string>
    <string name="attribute_key_a_default_elite">Location Elite</string>
    <string name="attribute_key_b_default_elite">Language Elite</string>
    <string name="attribute_key_c_default_elite">Service Elite</string>
    <string name="attribute_value_a_elite">ava Elite</string>
    <string name="attribute_value_b_elite">avb Elite</string>
    <string name="attribute_value_c_elite">avc Elite</string>
    <string name="attribute_value_a_default_elite">Inhouse Elite</string>
    <string name="attribute_value_b_default_elite">English Elite</string>
    <string name="attribute_value_c_default_elite">Sales Elite</string>
    <string name="preference_empty"></string>
    <string name="preference_amc_server">AMC Cluster Address</string>
    <string name="preference_amc_port">AMC Cluster Port</string>
    <string name="preference_aawg_server">AAWG Server Address</string>
    <string name="preference_aawg_url_path">AAWG URL Path</string>
    <string name="preference_aawg_port">AAWG Server Port</string>
    <string name="preference_aawg_secure">Use HTTPS</string>
    <string name="preference_token_server">Token Service Address</string>
    <string name="preference_token_port">Token Service Port</string>
    <string name="preference_token_secure">Use HTTPS</string>
    <string name="preference_token_url_path">Token Service URL Path</string>
    <string name="preference_amc_url_path">AMC URL Path</string>
    <string name="preference_secure_login">Use HTTPS</string>
    <string name="preference_log_file_name">Log File Name</string>
    <string name="menu_details_header">Settings</string>
    <string name="preference_display_name">Display Name</string>
    <string name="preference_number_to_call">Destination Address</string>
    <string name="preference_context">Context</string>
    <string name="preference_topic">Topic</string>
    <string name="preference_email_address">Email Address</string>
    <string name="preference_user_name">From Address</string>
    <string name="preference_priority">Priority</string>
    <string name="preference_locale">Locale</string>
    <string name="preference_strategy">Strategy</string>
    <string name="preference_source_name">Source Name</string>
    <string name="preference_resource_id">Resource Id</string>
    <string name="services_work_api">Service</string>
    <string name="resources_work_api">Resource</string>
    <string name="category_aawg">AAWG Configuration</string>
    <string name="category_token">Token Service Configuration</string>
    <string name="preference_log_to_device">Log to device</string>
    <string name="preference_aawg_server_elite">AAWG Server Address Elite</string>
    <string name="preference_aawg_url_path_elite">AAWG URL Path Elite</string>
    <string name="preference_aawg_port_elite">AAWG Server Port Elite</string>
    <string name="preference_aawg_secure_elite">Use HTTPS Elite</string>
    <string name="preference_token_server_elite">Token Service Address Elite</string>
    <string name="preference_token_port_elite">Token Service Port Elite</string>
    <string name="preference_token_secure_elite">Use HTTPS Elite</string>
    <string name="preference_token_url_path_elite">Token Service URL Path Elite</string>
    <string name="preference_log_file_name_elite">Log File Name Elite</string>
    <string name="preference_display_name_elite">Display Name Elite</string>
    <string name="preference_number_to_call_elite">Destination Address Elite</string>
    <string name="preference_context_elite">Context Elite</string>
    <string name="preference_topic_elite">Topic Elite</string>
    <string name="preference_email_address_elite">Email Address Elite</string>
    <string name="preference_user_name_elite">From Address Elite</string>
    <string name="preference_priority_elite">Priority Elite</string>
    <string name="preference_locale_elite">Locale Elite</string>
    <string name="preference_strategy_elite">Strategy Elite</string>
    <string name="preference_source_name_elite">Source Name Elite</string>
    <string name="preference_resource_id_elite">Resource Id Elite</string>
    <string name="services_work_api_elite">Service Elite</string>
    <string name="resources_work_api_elite">Resource Elite</string>
    <string name="category_aawg_elite">AAWG Configuration Elite</string>
    <string name="category_token_elite">Token Service Configuration Elite</string>
    <string name="preference_log_to_device_elite">Log to device Elite</string>
    <string name="locale">en_us</string>
    <string name="priority">5</string>
    <string name="strategy_idle">MOST_IDLE</string>
    <string name="strategy_occupied">LEAST_OCCUPIED</string>
    <string name="log_to_device">false</string>
    <string name="log_file_name">WebRTCReferenceClient</string>
    <string name="email_settings">Email address to send log files</string>
    <string name="information_dialog_title">Information</string>
    <string name="error_dialog_title">An error occurred</string>
    <string name="error_dialog_acknowledge">OK</string>
    <string name="issue_log_file_name">IssueLog-OceanaReferenceClient.log</string>
    <string name="issue_log_file_name_elite">IssueLog-EliteReferenceClient.log</string>
    <string name="uncaught_exception_email_log_files">An uncaught exception is causing the app to terminate. Emailing log files, select app to use...</string>
    <string name="no_log_files_found">Log files could not be found or generated. In the setting click \'Log to device\' to enable log file generation</string>
    <string name="email_log_files">Emailing log files, select app to use...</string>
    <string name="logging_settings">Logging</string>
    <string name="dtmf_1">1</string>
    <string name="dtmf_2">2</string>
    <string name="dtmf_3">3</string>
    <string name="dtmf_4">4</string>
    <string name="dtmf_5">5</string>
    <string name="dtmf_6">6</string>
    <string name="dtmf_7">7</string>
    <string name="dtmf_8">8</string>
    <string name="dtmf_9">9</string>
    <string name="dtmf_asterisk">*</string>
    <string name="dtmf_0">0</string>
    <string name="dtmf_hash">#</string>
    <string name="dtmf_a">A</string>
    <string name="dtmf_b">B</string>
    <string name="dtmf_c">C</string>
    <string name="dtmf_d">D</string>
    <string name="dtmf_dismiss">Dismiss</string>
    <string name="security_settings">Security</string>
    <string name="secure_login">true</string>
    <string name="amc_port">443</string>
    <string name="amc_url_path">services/AvayaMobileCommunications/sessions</string>
    <string name="aawg_port">443</string>
    <string name="token_port">443</string>
    <string name="aawg_secure">true</string>
    <string name="aawg_url_path">csa/resources/tenants/default</string>
    <string name="token_secure">true</string>
    <string name="token_url_path">token-generation-service/token/getEncryptedToken</string>
    <string name="menu_background_text_oceana">Wahana WebRTC Client</string>
    <string name="menu_background_text_elite">Wahana WebRTC Client</string>
    <string name="menu_background_text_audio">Enhance Your Customer App by Adding Avaya Oceana™ WebRTC Audio</string>
    <string name="menu_background_text_video">Enhance Your Customer App by Adding Avaya Oceana™ WebRTC Video</string>
    <string name="available_resolutions">Available Resolutions</string>
    <string name="click_to_call">\n Click To Call</string>
    <string name="audio_call">Audio</string>
    <string name="video_call">Video</string>
    <string name="call_state">Connecting</string>
    <string name="elapsed_time_label">Call Time</string>
    <string name="select_audio_device">Select audio device</string>
    <string name="headset">Headset</string>
    <string name="bt_headset">Bluetooth headset</string>
    <string name="ear_speaker">Earpiece speaker</string>
    <string name="speaker">Speaker</string>
    <string name="video_disabled">Video Disabled</string>
    <string name="encryption_enabled">false</string>
    <string name="failed_to_connect">Failed to connect for login</string>
    <string name="failed_to_login">Failed to login</string>
    <string name="unknown_failure">Unknown failure</string>
    <string name="no_device_to_switch">No devices to switch</string>
    <string name="fps">fps</string>
    <string name="kbps">kbps</string>
    <string name="ms">ms</string>
    <string name="packets">packets</string>
    <string name="send">Send</string>
    <string name="receive">Receive</string>
    <string name="action_call_statistics">Call Statistics</string>
    <string name="tls">TLS</string>
    <string name="udp">UDP</string>
    <string name="sip_ua">SIP-UA</string>
    <string name="http_ua">HTTP-UA</string>
    <string name="key">Key</string>
    <string name="value">Value</string>
    <string name="header">header</string>
    <string name="elite_preferences">ElitePreferences</string>
    <string name="platformType">platformType</string>
    <string name="platformTypeOceana">Oceana</string>
    <string name="platformTypeElite">Elite</string>
    <string name="available_orientations"></string>
    <string name="zero_zero">00:00</string>
    <string name="audio_statistics">Audio Statistics</string>
    <string name="video_statistics">Video Statistics</string>
    <string name="foreground_channel_name">Call status</string>
    <string name="foreground_notification_text">You are on a call</string>
    <string name="call_quality_emos">Call Quality (EMOS)</string>
    <string name="Excellent">Excellent</string>
    <string name="Good">Good</string>
    <string name="Fair">Fair</string>
    <string name="Poor">Poor</string>
    <string name="Bad">Bad</string>
    <string name="No_Network">No Network</string>
    <string name="video_quality_not_satisfactory">Video quality not satisfactory. Disabling video.</string>
    <string name="video_disabled_due_to_unacceptable_quality">Video has been disabled due to unacceptable quality.</string>
    <string name="video_can_be_enabled_threshold_crossed">Video can be enabled as quality threshold is crossed</string>
</resources>