<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory android:title="@string/attribute_label">
        <EditTextPreference
            android:defaultValue="@string/attribute_key_a_default"
            android:inputType="text"
            android:key="@string/attribute_key_a"
            android:title="@string/attribute_name" />
        <EditTextPreference
            android:defaultValue="@string/attribute_value_a_default"
            android:inputType="text"
            android:key="@string/attribute_value_a"
            android:title="@string/attribute_value" />
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/attribute_label">
        <EditTextPreference
            android:defaultValue="@string/attribute_key_b_default"
            android:inputType="text"
            android:key="@string/attribute_key_b"
            android:title="@string/attribute_name" />
        <EditTextPreference
            android:defaultValue="@string/attribute_value_b_default"
            android:inputType="text"
            android:key="@string/attribute_value_b"
            android:title="@string/attribute_value" />
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/attribute_label">
        <EditTextPreference
            android:defaultValue="@string/attribute_key_c_default"
            android:inputType="text"
            android:key="@string/attribute_key_c"
            android:title="@string/attribute_name" />
        <EditTextPreference
            android:defaultValue="@string/attribute_value_c_default"
            android:inputType="text"
            android:key="@string/attribute_value_c"
            android:title="@string/attribute_value" />
    </PreferenceCategory>
</PreferenceScreen>
